# speda-mark5

./: .gitignore  FILE_UPLOAD_GUIDE.md  GALAXY_WATCH_PLAN.md  GEMINI_DOCS.MD  README.md
.github/workflows/: deploy.yml
backend/: .env.example  .env.production  Assistants api.md  DEPLOYMENT.md  Dockerfile  README.md  backup-db.sh  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  quick-deploy.sh  restore-db.sh
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  auth.py  briefing.py  calendar.py  chat.py  email.py  files.py  integrations.py  knowledge.py  notifications.py  settings.py  tasks.py  voice.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  briefing.py  calendar.py  conversation.py  diagnostics.py  email.py  function_calling.py  google_auth.py  google_calendar.py  google_gmail.py  google_tasks.py  imap_mail.py  knowledge_base.py  llm.py  memory.py  microsoft_auth.py  microsoft_mail.py  news.py  scheduler.py  search.py  task.py  weather.py
backend/deploy/: README.md
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/lib/: app.dart  main.dart
frontend/lib/core/config/: app_config.dart
frontend/lib/core/models/: api_response.dart
frontend/lib/core/navigation/: app_router.dart
frontend/lib/core/services/: api_service.dart  (+3 more)
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
(+35 files in other folders)
